Fix z-index of modal and mini-player

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -277,6 +277,7 @@ header {
   align-items: center;
   justify-content: space-between;
   position: fixed;
+  z-index: 2;
   bottom: 0;
   right: 0;
   left: 0;
@@ -445,7 +446,7 @@ header {
 .phx-modal {
   opacity: 1!important;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   top: 0;
   width: 100%;
